--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Definitely Not a Dating App</title>
+  <title>Ur Personal Dating App</title>
 
   <style>
     * {
@@ -114,7 +114,7 @@
 <script>
   const profiles = [
     {
-      name: "YOUR_NAME, 19",
+      name: "Aryan, 20",
       bio: "Will absolutely steal your fries and deny it.",
       img: "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
     },
@@ -138,6 +138,16 @@
       bio: "Lowkey hoping you swipe right.",
       img: "https://images.unsplash.com/photo-1500648767791-00dcc994a43e"
     }
+     {
+      name: "Aryan, 20",
+      bio: "Will absolutely steal your fries and deny it.",
+      img: "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
+    },
+     {
+      name: "Aryan, 20",
+      bio: "Will absolutely steal your fries and deny it.",
+      img: "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
+    },
   ];
 
   const app = document.getElementById("app");
