--- a/index.html
+++ b/index.html
@@ -114,22 +114,22 @@
 <script>
   const profiles = [
     {
-      name: "Aryan, 20",
-      bio: "Will absolutely steal your fries and deny it.",
+      name: "Aryan, 19",
+      bio: "Ur first crush, the black button down",
       img: "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
     },
     {
-      name: "YOUR_NAME, 19",
+      name: "Aryan, 20",
       bio: "Competitive at mini golf for no reason.",
       img: "https://images.unsplash.com/photo-1506794778202-cad84cf45f1d"
     },
     {
-      name: "YOUR_NAME, 19",
+      name: "Aryan, 20",
       bio: "Remembers the little things. Teases you about them.",
       img: "https://images.unsplash.com/photo-1494790108377-be9c29b29330"
     },
     {
-      name: "YOUR_NAME, 19",
+      name: "Aryan, 20",
       bio: "Will plan the date. Yes, really.",
       img: "https://images.unsplash.com/photo-1520813792240-56fc4a3765a7"
     },
@@ -137,7 +137,7 @@
       name: "YOUR_NAME, 19",
       bio: "Lowkey hoping you swipe right.",
       img: "https://images.unsplash.com/photo-1500648767791-00dcc994a43e"
-    }
+    },
      {
       name: "Aryan, 20",
       bio: "Will absolutely steal your fries and deny it.",
