--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     },
     {
       name: "Aryan, 20",
-      bio: "Competitive at mini golf for no reason.",
+      bio: "Said to be the best Garba dancer in the states.",
       img: "https://images.unsplash.com/photo-1506794778202-cad84cf45f1d"
     },
     {
