--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
       img: "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
     },
     {
-      name: "Aryan, 20",
+      name: "Krishu, 20",
       bio: "Said to be the best Garba dancer in the states.",
-      img: "https://images.unsplash.com/photo-1506794778202-cad84cf45f1d"
+      img: "WhatsApp Image 2026-02-14 at 11.57.22 AM.jpeg"
     },
     {
-      name: "Aryan, 20",
+      name: "Aaru, 20",
       bio: "Remembers the little things. Teases you about them.",
       img: "https://images.unsplash.com/photo-1494790108377-be9c29b29330"
     },
