--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
   const profiles = [
     {
       name: "Aryan, 19",
-      bio: "Ur first crush, the black button down",
+      bio: "Ur first crush. The guy who'd spend hours on call talking.",
       img: "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
     },
     {
       name: "Krishu, 20",
-      bio: "Said to be the best Garba dancer in the states.",
+      bio: "Said to be the best Garba dancer in the states",
       img: "WhatsApp Image 2026-02-14 at 11.57.22 AM.jpeg"
     },
     {
       name: "Aaru, 20",
-      bio: "Remembers the little things. Teases you about them.",
+      bio: "Remembers the little things. Teases you about them",
       img: "https://images.unsplash.com/photo-1494790108377-be9c29b29330"
     },
     {
