Update profiles with new names, bios, and images

--- a/index.html
+++ b/index.html
@@ -116,7 +116,12 @@
     {
       name: "Aryan, 19",
       bio: "Ur first crush. The guy who'd spend hours on call talking.",
-      img: "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
+      img: "Cute.jpeg"
+    },
+        {
+      name: "Kuchupuchu, 20",
+      bio: "A little goofy, will always match your energy though",
+      img: "Cute.jpeg"
     },
     {
       name: "Krishu, 20",
@@ -125,18 +130,13 @@
     },
     {
       name: "Aaru, 20",
-      bio: "Remembers the little things. Teases you about them",
-      img: "https://images.unsplash.com/photo-1494790108377-be9c29b29330"
+      bio: "Has this undeniably hot aesthetic",
+      img: "Concert.jpeg"
     },
     {
-      name: "Aryan, 20",
-      bio: "Will plan the date. Yes, really.",
-      img: "https://images.unsplash.com/photo-1520813792240-56fc4a3765a7"
-    },
-    {
-      name: "YOUR_NAME, 19",
-      bio: "Lowkey hoping you swipe right.",
-      img: "https://images.unsplash.com/photo-1500648767791-00dcc994a43e"
+      name: "Baby, 20",
+      bio: "Loves teasing, if you can't tell from that deep neckline",
+      img: "Quarter Zip.jpeg"
     },
      {
       name: "Aryan, 20",
