Update profile images and names in index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     {
       name: "Aryan, 19",
       bio: "Ur first crush. The guy who'd spend hours on call talking.",
-      img: "Cute.jpeg"
+      img: "Call.jpeg"
     },
         {
       name: "Kuchupuchu, 20",
@@ -139,14 +139,14 @@
       img: "Quarter Zip.jpeg"
     },
      {
-      name: "Aryan, 20",
-      bio: "Will absolutely steal your fries and deny it.",
-      img: "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
+      name: "Babe, 20",
+      bio: "Button downs look hot, but wants you to consider unbuttoning 😏",
+      img: "Button Down.jpeg"
     },
      {
-      name: "Aryan, 20",
-      bio: "Will absolutely steal your fries and deny it.",
-      img: "https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
+      name: "Boyfriend?, 20",
+      bio: "Do I even have to say anything about this hot peice of ass",
+      img: "Black Kurta.jpeg"
     },
   ];
 
