Update final message in index.html

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
     if (index >= profiles.length) {
       app.innerHTML = `
         <div class="final">
-          <h1>Looks like you have a type 😌</h1>
-          <p>So… wanna go out with me?</p>
-          <button onclick="alert('Perfect. I’ll plan it 😉')">
+          <h1>Looks like you have a type 😌 , me.</h1>
+          <p>So… How about we stop beating around the bush, Would you give me the honor of being called "Likhu's Aaru"</p>
+          <button onclick="alert('Phew I was so nervous (not really) 😉')">
             Yes ❤️
           </button>
         </div>
